bin/tests/snapshots/empty_inherit__2370f348818d984736674ed594a500980e67c68740a68810e6d7ad6e42e95cad_lint.snap
---
source: bin/tests/empty_inherit.rs
---
{ inherit; }
---
[W14] Warning: Found empty inherit statement
   ╭─[<temp_file_path>:1:3]
   │
 1 │ { inherit; }
   ·   ────┬───  
   ·       ╰───── Remove this empty inherit statement
───╯
