bin/tests/snapshots/empty_inherit__2370f348818d984736674ed594a50098_lint_errfmt.snap
---
source: bin/tests/empty_inherit.rs
---
{ inherit; }
---
<temp_file_path>>1:3:W:14:Remove this empty `inherit` statement
