bin/tests/snapshots/empty_inherit__2370f348818d984736674ed594a50098_lint_stderr.snap
---
source: bin/tests/empty_inherit.rs
---
{ inherit; }
---
[empty_inherit] Warning: Found empty inherit statement
   ╭─[ <temp_file_path>:1:3 ]
   │
 1 │ { inherit; }
   │   ────┬───  
   │       ╰───── Remove this empty inherit statement
───╯
