bin/tests/snapshots/empty_inherit__fix_2370f348818d984736674ed594a500980e67c68740a68810e6d7ad6e42e95cad.snap
---
source: bin/tests/empty_inherit.rs
---
expression:
{ inherit; }
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-{ inherit; }
+{ }
