bin/tests/snapshots/empty_inherit__fix_ec36d3cff413cb138f67e7fc4bb7f378177910afedef33d0f9c31deb0e2fb93d.snap
---
source: bin/tests/empty_inherit.rs
---
{ inherit; }

---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-{ inherit; }
+{ }
