bin/tests/snapshots/empty_inherit__lint_ec36d3cff413cb138f67e7fc4bb7f378177910afedef33d0f9c31deb0e2fb93d.snap
---
source: bin/tests/empty_inherit.rs
---
{ inherit; }

---
[W14] Warning: Found empty inherit statement
   ╭─[<temp_file_path>:1:3]
   │
 1 │ { inherit; }
   ·   ────┬───  
   ·       ╰───── Remove this empty inherit statement
───╯
